Add Scala Native FFI, scaladesktop shared sources, browser sensors
Scala Native: @extern FFI for GLFW windowing, miniaudio audio,
ANGLE GL ES 2.0-3.2, EGL context management, DesktopApplicationFactory.
Create scaladesktop/ shared source directory for JVM+Native desktop code.
Browser: accelerometer, gyroscope, Permissions API support.